# IntruderNet

./: .gitignore  README.md  Untitled.ipynb  capture.py  evaluate.py  headlessSetup.txt  test.py  train.py
intrudernet_inference/: CMakeLists.txt
intrudernet_inference/src/: main.cpp
scripts/: confusion_matrix_eval.py  curate.py  evaluate.py  move.py  test.py
